2011-07-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFDate.m:
	* Source/CFDate.c:
	* Source/GNUmakefile:
	* Headers/CoreFoundation/CFDate.h: Make CFDate a C file.  Will use
	CFCalendar and ICU functions to implement this functionality.
	* Source/CFLocale.c: Fix a few bugs found when testing CFCalendar.
	* Source/Identifiers.m: Add ISO8601 calendar identifier.
	* Source/CFCalendar.c:
	* Headers/CoreFoundation/CFCalendar.h: Started implementing CFCalendar.

2011-06-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Implemented CFStringCreateWithBytesNoCopy() and
	fixed a bug in CFStringCreateByCombiningStrings().

2011-06-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Implement CFStringPad().

2011-06-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringFormat.c: Fix a few bugs in string formatting code.

2011-06-25 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringFormat.c: Added hex and octal formatting code.
	* Tests/CFString/format.m: Add hex and octal formatting test.

2011-06-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringFormat.c: Added double formatting code.
	* Tests/CFString/format.m: Add double formatting test.

2011-06-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringUtilities.c: Remove use of alloca().
	* Source/CFStringEncoding.c: Fix conversion bug.
	* Source/CFStringFormat.c: Added more formatting code.

2011-06-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFUUID.c: Generate uuids using random function instead of
	relying on libuuid.

2011-06-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile: Added CFStringFormat.c to build.
	* Source/CFString.c: Fixed bugs and added a work around.
	* Source/CFStringFormat.c: Added, still incomplete, string formatting
	code.
	* Tests/CFString/format.m: String formatting tests.

2011-06-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Added CFStringAppendCharacters()
